# nonebot2

./: .editorconfig  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .stylelintrc.js  .travis.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Write_Command.md  Write_Filter.md  apiclient.py  app.py  command.py  config.py  config.sample.py  docker-compose.yml  filter.py  interactive.py  little_shit.py  msg_src_adapter.py  nl_processor.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  run.py  setup.py  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: adapter-publish.md  adapter_publish.yml  bot_publish.yml  bug-report.md  bug_report.yml  config.yml  document.md  document.yml  feature_request.md  feature_request.yml  plugin-publish.md  plugin_publish.yml
.github/workflows/: api_docs.yml  build_docs.yml  codecov.yml  nonebot_plugin_docs.yml  noneflow.yml  plugin_issue.yml  publish-bot.yml  publish_bot.yml  pyright.yml  release-drafter.yml  release-github.yml  release-plugin-docs.yml  release.yml  ruff.yml  site_deploy.yml  upload_docs.yml  website-deploy.yml  website-preview-cd.yml  website-preview-ci.yml  website-preview.yml
archive/2.0.0a1/: README.md  sidebar.config.json
archive/2.0.0a10/: sidebar.config.json
archive/2.0.0a11/: sidebar.config.json
archive/2.0.0a12/: sidebar.config.json
archive/2.0.0a16/: sidebar.config.json
archive/2.0.0a2/: sidebar.config.json
archive/2.0.0a3/: sidebar.config.json
archive/2.0.0a4/: sidebar.config.json
archive/2.0.0a5/: README.md  sidebar.config.json
archive/2.0.0a6/: sidebar.config.json
archive/2.0.0a7/: README.md  sidebar.config.json
archive/2.0.0a8.post2/: sidebar.config.json
archive/2.0.0a9/: README.md  sidebar.config.json
assets/: adapters.json  adapters.json5  bots.json  bots.json5  drivers.json5  plugins.json  plugins.json5
commands/: ai.py  bilibili.py  core.py  encode.py  natural_language.py  networktools.py  note.py  random.py  scheduler.py  simpletools.py  subscribe.py  sudo.py  todayinhistory.py  translate.py  weather.py  zhihu.py
data/db/: default.db
demo/: __init__.py  config.py
demo/plugins/: groupadmin.py  repeater.py  tuling.py  usage.py
docs/: Context.md  Message_Sources.md  README.md  Write_Adapter.md  Write_Command.md  Write_Filter.md  Write_NLProcessor.md  api.md  changelog.md  config.js  configurations.md  glossary.md  index.html
docs/.vuepress/: config.js  enhanceApp.js  override.styl  style.styl  versions.json
docs/advanced/: README.md  argparse.md  command-argument.md  command-group.md  command-session.md  database.md  decorator.md  deployment.md  export-and-require.md  larger-application.md  logging.md  message.md  overloaded-handlers.md  permission.md  publish-plugin.md  runtime-hook.md  scheduler.md  server-app.md  session.md
docs/api/: README.md  config.md  dependencies.md  exception.md  handler.md  log.md  matcher.md  message.md  nonebot.md  permission.md  plugin.md  rule.md  typing.md  utils.md
docs/guide/: README.md  basic-configuration.md  basic-configurations.md  calling-cqhttp-api.md  command.md  cqhttp-guide.md  cqhttp.md  creating-a-handler.md  creating-a-matcher.md  creating-a-plugin.md  creating-a-project.md  ding-guide.md  end-or-start.md  feishu-guide.md  getting-started.md  gocq-guide.md  group-management.md  handling-notices-and-requests.md  installation.md  loading-a-plugin.md  mirai-guide.md  nl-processor.md  notice-and-request.md  scheduler.md  telegram-guide.md  tuling.md  usage.md  (+7 more)
docs_build/: README.rst  api.rst  autodoc.py  conf.py  config.rst  dependencies.rst  exception.rst  handler.rst  log.rst  matcher.rst  message.rst  nonebot.rst  permission.rst  plugin.rst  rule.rst  sched.rst  typing.rst  utils.rst
envs/pydantic-v1/: pyproject.toml
envs/pydantic-v2/: pyproject.toml
envs/test/: nonebot-test.py  pyproject.toml
filters/: allow_only_message_10000.py  command_dispatcher.py  command_dispatcher_0.py  frequency_limiter.py  how_to_use.py  how_to_use_1.py  intercept_blocked_target_100.py  intercept_massive_platform_100.py  intercept_some_message_formats_100.py  message_logger.py  message_logger_1000.py  speech_recognition_90.py  split_at_xiaokai_50.py  unitize_context_message_10000.py
msg_src_adapters/: coolq_http_api.py  mojo_webqq.py  mojo_weixin.py
nl_processors/: bilibili.py  translate.py  weather.py
none/: __init__.py  argparse.py  command.py  default_config.py  exceptions.py  expression.py  helpers.py  log.py  logger.py  message.py  natural_language.py  notice.py  notice_request.py  permission.py  permissions.py  plugin.py  scheduler.py  session.py  typing.py
none_demo/: __init__.py  config.py  run.py
nonebot/: __init__.py  _compat.py  argparse.py  command.py  compat.py  config.py  consts.py  default_config.py  event.py  exception.py  gen_version.py  handler.py  helpers.py  log.py  matcher.py  message.py  natural_language.py  notice_request.py  params.py  permission.py  plugin.py  plugin.pyi  rule.py  sched.py  session.py  typing.py  utils.py  version.py
nonebot_test/: __init__.py
pages/: changelog.md  plugin-store.md  store.md
plugins/: base.py  weather.py
scripts/: build-api-docs.sh  run-tests.sh  setup-envs.sh  update-envs.sh
tests/: .coveragerc  .env  .env.dev  .env.example  .env.test  .isort.cfg  bot.py  conftest.py  fake_server.py  junit.xml  plugins.invalid.toml  plugins.json  plugins.legacy.toml  plugins.toml  pyproject.toml  test_broadcast.py  test_compat.py  test_config.py  test_driver.py  test_echo.py  test_init.py  test_matcher.py  test_param.py  test_permission.py  test_rule.py  test_single_session.py  test_utils.py  test_version.py  utils.py
website/: docusaurus.config.js  docusaurus.config.ts  package.json  sidebars.js  sidebars.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  versions.json
(+1322 files in other folders)
