[project]
name = "nonebot-pydantic-v2"
version = "0.1.0"
description = "Private pydantic v2 test env for nonebot"
authors = [{ name = "yanyongyu", email = "yyy@nonebot.dev" }]
license = "MIT"
requires-python = ">=3.9, <4.0"
package = false

[dependency-groups]
dev = [
  "nonebot-test",
  "nonebot2[all]",
  "pydantic>=2.0.0, <3.0.0",
]

[tool.uv.sources]
nonebot2 = { path = "../../", editable = true }
nonebot-test = { path = "../test/", editable = false }
