[project]
name = "nonebot-test"
version = "0.1.0"
description = "Private test env for nonebot"
authors = [{ name = "yanyongyu", email = "yyy@nonebot.dev" }]
license = "MIT"
requires-python = ">=3.9, <4.0"
dependencies = [
  "trio >=0.27.0",
  "nonebug >=0.4.1, <0.5.0",
  "wsproto >=1.2.0, <2.0.0",
  "werkzeug >=2.3.6, <4.0.0",
  "pytest-cov >=6.0.0, <7.0.0",
  "pytest-xdist >=3.0.2, <4.0.0",
  "coverage-conditional-plugin >=0.9.0, <0.10.0",
]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
